--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.min.js"></script>
-    <script src="sketch.js?v=<?=rand(0,9999)?>"></script>
+    <script src="sketch.js"></script>
   </head>
   <body>
     <button onclick="spin()">Spin</button>
