--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="sketch.js"></script>
   </head>
   <body>
-    <button onclick="spin()">Spin</button>
+    <div onclick="spin()" style="position: fixed;z-index: 9999;bottom:0;left:0;right:0;text-align:center;
+    background: black;color: white;padding: 20px; font-size: 21px;">Double click on canvas or single click here to start again.</div>
   </body>
 </html>
